SUBDIRS=smlng turtle

NICKLEFILES=\
	comb.5c \
	cribbage.5c \
	erat.5c \
	fourfours.5c \
	initializer.5c \
	is-prime.5c \
	kaiser.5c \
	menace2.5c \
	miller-rabin.5c \
	mutextest.5c \
	numbers.5c \
	polynomial.5c \
	prime.5c \
	qbrating.5c \
	randtest.5c \
	restart.5c \
	roman.5c \
	rsa-demo.5c \
	rsa.5c \
	skiplisttest.5c \
	sudoku.5c

exampledir=$(pkgdatadir)/examples

example_DATA=$(NICKLEFILES) COPYING

EXTRA_DIST=$(NICKLEFILES) COPYING
